--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello world. This is my first webpage. Yay!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Videogames with friends, cooking, cocktails, fermentation and my plants!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>After years in the service industry, honestly, anything with growth potential feels like a dream.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Still Seattle.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Potential to work from home sonds so nice right now.</p>
     </section>
 
     <footer id="footer">
