--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>Still Seattle.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Potential to work from home sonds so nice right now.</p>
+      <p>Potential to work from home sounds so nice right now.</p>
     </section>
 
     <footer id="footer">
