--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>About Me</title>
+    <title>About Meeeeeee</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -32,7 +32,7 @@
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/brysgithub">Github</a></li>
         </ul>
     </footer>
 </body>
